   - new Makefile, take care of INSTALLDIR and prefix
   - replace $(PWD) by $(shell pwd) for debian/ubuntu packages
   - new targets
      - $(pluginsrcdir)/satip/satip.h (skip header if already there)
      - printvars (debug - may be useful before make install)
   - shorten compile messages for readability
   - update to wirbelscan-2021.03.07, which
      - adds some DVB-C freqs
      - skips second DVB-C loop, if QAM_AUTO support
* README
   - add package hints for debian/ubuntu
   - add hint, how to install in /usr: make prefix=/usr install
   - Update satip upstream address to github

20210512:
-------------------------------------------------------------------------------
* OutputFormats.cpp
   - fix VLC output: Frequencies were rounded incorrectly.

20210608:
-------------------------------------------------------------------------------
* CmdOpts.cpp
   - change cmdline help to point on general SAT>IP page
* Makefile
   - fix variable man[1-5]dir
   - add -DDISABLE_TEMPLATES_COLLIDING_WITH_STL for *.cpp files
* doc/w_scan_cpp.1
   - initial man page for w_scan_cpp

20210718:
-------------------------------------------------------------------------------
* CmdOpts.cpp
   - add new options:
     --output-VLC-satip, generate VLC xspf playlist for SAT>IP
     --sort-criteria, sort output as per file
* doc/w_scan_cpp.1
   - document new options
* main.cpp
   - print satip server address
* Helpers.{h,cpp}
   - add functions ReadFile, SVDRP
* Makefile
   - update to wirbelscan-2021.07.14
   - remove a few non-Ascii chars
   - silence find command
   - create satip.h by extra binary instead of sed
* OutputFormats.cpp
   - PrintVLC
     - fix ampersand in Name
     - add missing </vlc:option> after Sat plp-id
   - add PrintVLCsatip

20210xxx:
-------------------------------------------------------------------------------
* Helpers.{h,cpp}
   - add functions FloatToStr, ExpToStr
* Femon.{h,cpp}, CmdOpts.{h,cpp}, doc/w_scan_cpp.1
   - add new option --femon